--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "expo-blur": "~15.0.7",
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
+    "expo-crypto": "~15.0.7",
     "expo-document-picker": "^14.0.7",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.8",
@@ -48,6 +49,7 @@
     "react-native-screens": "~4.16.0",
     "react-native-svg": "15.12.1",
     "react-native-url-polyfill": "^2.0.0",
+    "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.0",
     "react-native-webview": "13.15.0",
     "react-native-worklets": "^0.6.1"
