--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "typecheck": "tsc --noEmit"
   },
   "dependencies": {
+    "@epubjs-react-native/core": "^1.4.7",
+    "@epubjs-react-native/expo-file-system": "^1.1.4",
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
     "@react-native-async-storage/async-storage": "2.2.0",
@@ -23,7 +25,7 @@
     "expo-camera": "~17.0.8",
     "expo-constants": "~18.0.10",
     "expo-crypto": "~15.0.7",
-    "expo-document-picker": "^14.0.7",
+    "expo-document-picker": "~14.0.7",
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
@@ -43,7 +45,6 @@
     "react-native": "0.81.4",
     "react-native-blob-util": "^0.23.2",
     "react-native-gesture-handler": "~2.28.0",
-    "react-native-pdf": "^7.0.3",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "~4.16.0",
@@ -51,7 +52,7 @@
     "react-native-url-polyfill": "^2.0.0",
     "react-native-uuid": "^2.0.3",
     "react-native-web": "^0.21.0",
-    "react-native-webview": "13.15.0",
+    "react-native-webview": "^13.15.0",
     "react-native-worklets": "^0.6.1"
   },
   "devDependencies": {
