--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "@epubjs-react-native/expo-file-system": "^1.1.4",
     "@expo/vector-icons": "^15.0.2",
     "@lucide/lab": "^0.1.2",
-    "@react-native-async-storage/async-storage": "2.2.0",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-native-documents/viewer": "^2.0.2",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
@@ -29,6 +29,7 @@
     "expo-file-system": "~19.0.19",
     "expo-font": "~14.0.8",
     "expo-haptics": "~15.0.7",
+    "expo-image-picker": "^17.0.9",
     "expo-linear-gradient": "~15.0.7",
     "expo-linking": "~8.0.9",
     "expo-router": "~6.0.15",
